<resources>
    <string name="app_name">Fotogram Animation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="g_b_previous">Previous</string>
    <string name="g_b_next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photogramAnimation">Animación de Fotogramas</string>
    <string name="photogramAnimationByCode">Animación de Fotogramas Usando Codigo</string>
    <string name="photogramAnimationAspectCompensation">Animación de Fotogramas Compensados</string>
    <string name="start_animation">Iniciar Animación</string>
    <string name="stop_animation">Detener Animación</string>
    <string name="load_info">Mostrar metadata</string>
</resources>